# RAG-Experiment-for-diagrams

./: README.md  main.py  pyproject.toml
data/: qa_pairs.jsonl
templates/: index.html
